[package]
name = "authn-api"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { features = ["json"], version = "0.5.0-rc.2" }
mongodb = "2.1"
dotenv = "0.15.0"
chrono = "0.4.24"
uuid = "1.3.1"
auth-lib-paq1 = { git = "https://github.com/paq1/auth-lib-paq1.git", version = "0.3.0" }